# BuildX-Hackathon

./: .env.sample  .gitignore  README.md  credentials.json  deploy.sh  main.py  pyproject.toml  requirements.txt
app/: models.py
app/agents/: analytics.py  seo.py
app/core/: config.py  llm.py  orchestrator.py
scripts/: test_runner.py
